...
        },
        translationContainer: {
            flexDirection: 'row',
            paddingHorizontal: 20,
            backgroundColor: getThemeParam('backgroundColor', theme)
        },
        translation: {
            fontSize: 24,
            paddingRight: 30,
            color: getThemeParam('descTextColor', theme),
        },
        buttons: {
            flexDirection: 'row',
...
                    : "Tap to enter text"}
                placeholderTextColor={getThemeParam('textInputPlaceholder', theme)}
                keyboardAppearance={theme === 'white' ? 'light' : 'dark'}
                multiline={true}
                editable={lang.into === 'morse'}
                style={styles.textinput}
                testID="textToTranslateInput"
                />

            <Hr />

            <Animated.ScrollView horizontal={true} style={[styles.translationContainer, { minHeight: transHeight }]}>
                <Text style={styles.translation} testID="translation">
...
